# dna-movement-sufolobus

./: .gitignore  1_List_files.ipynb  1_Process.ipynb  2_Graphs.ipynb  2_Process.ipynb  3_Graphs.ipynb  3_Visualization.ipynb  CITATION.cff  Graphs.ipynb  Process.ipynb  README.md  Test.ipynb  dnasufo.py  environment.yml  listfiles-tmp.py  motionquant.py  pyproject.toml  run.sh  sheets.xlsx
.github/workflows/: python-package.yml
dnasufo/: __init__.py  __main__.py  dnasufo.py
notebooks/: 0_Example.ipynb  1_List_files.ipynb  2_Process.ipynb  3_Visualization.ipynb
script/: run.sh
test/: test_process.py
